[gd_scene load_steps=3 format=2]

[ext_resource path="res://Tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameOfLife.gd" type="Script" id=2]

[node name="GameOfLife" type="Node2D"]
script = ExtResource( 2 )
map_size = Vector2( 50, 50 )
tile_scene = ExtResource( 1 )
tile_width = 10

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="StartButton" type="Button" parent="."]
margin_left = 910.0
margin_top = 17.0
margin_right = 951.0
margin_bottom = 37.0
text = "Start"

[node name="StopButton" type="Button" parent="."]
margin_left = 909.0
margin_top = 87.0
margin_right = 949.0
margin_bottom = 107.0
text = "Stop"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="StopButton" to="." method="_on_StopButton_pressed"]
